--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
     <h3>Diabetes Predictor</h3>
   </div>
   <div class="content">
-        <form class="form card shadow  rounded" autocomplete="off" method='POST' action="{{ url_for('predict') }}" style="width: 40rem; padding: 3rem; margin: auto; ">
+        <form class="form card shadow  rounded" autocomplete="off" method='POST' action="{{ url_for('predict') }}" style=" padding: 3rem; margin: auto; ">
             <div class="input-group mb-3" >
                 <span class="input-group-text" id="basic-addon1">Glucose (mg/dL)</span>
                 <input required type="text" name='glucose'class="form-control" placeholder="e.g. 100" aria-label="Glucose" aria-describedby="basic-addon1">
