LinkedIn Handle Updated

--- a/templates/result.html
+++ b/templates/result.html
@@ -35,7 +35,7 @@
                 class="fa fa-envelope fa-lg contact-icon" id="email"></i></a>
              <a target="_blank" href="https://github.com/krupalvasani"><i
                       class="fab fa-github fa-lg contact-icon" id="git"></i></a>
-              <a target="_blank" href="https://www.linkedin.com/in/krupal-vasani-659ba91a0/"><i
+              <a target="_blank" href="https://www.linkedin.com/in/krupal-vasani/"><i
                       class="fab fa-linkedin fa-lg contact-icon" id="lkd"></i></a>
           </div>
           </div>
