Background Image added

--- a/templates/index.html
+++ b/templates/index.html
@@ -53,15 +53,19 @@
               <input class="btn btn-dark w-100 mt-4" type="submit" value="Predict"/>
           </form>
   </div>  
-          <div class="footer " style="margin-top: 7rem;">
+          <div class="footer ">
             <div class="contact">
+              <div>
               <i class="footer_text">Get In Touch</i>
-              <a target="_blank" href="mailto:geekforgeeks222@gmail.com"><i
+            </div>
+              <div>
+                <a target="_blank" href="mailto:geekforgeeks222@gmail.com"><i
                 class="fa fa-envelope fa-lg contact-icon" id="email"></i></a>
-             <a target="_blank" href="https://github.com/krupalvasani"><i
-                      class="fab fa-github fa-lg contact-icon" id="git"></i></a>
+                <a target="_blank" href="https://github.com/krupalvasani"><i
+                class="fab fa-github fa-lg contact-icon" id="git"></i></a>
               <a target="_blank" href="https://www.linkedin.com/in/krupal-vasani/"><i
-                      class="fab fa-linkedin fa-lg contact-icon" id="lkd"></i></a>
+                class="fab fa-linkedin fa-lg contact-icon" id="lkd"></i></a>
+              </div>
           </div>
           </div>
         </div>
