--- a/static/style.css
+++ b/static/style.css
@@ -4,7 +4,7 @@
     outline: none;
   }
   body{
-    background: linear-gradient(rgba(1, 0, 0, 0.7), rgba(0, 0, 0, 0.1));
+    background:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.1)), url("bg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -40,6 +40,15 @@
     align-items: center;
     font-size: 20px;
   }
+  .contact{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+  }
+  .contact div {
+    height: 50px;
+  }
   .footer_text{
     margin: 2px 60px 2px 20px;
     color: black;
@@ -56,6 +65,11 @@
     margin-left: 5px;
   }
 
+  .card_result{
+    width: auto;
+    padding: 10px;
+    margin: 6rem .5rem .5rem .5rem;  
+}
   /* Result */
 
 .danger{
@@ -74,4 +88,20 @@ font-weight: bolder;
 img {
   max-width: 100%;
   height: auto;
+}
+
+@media screen and (max-width:600px) {
+  .head h3{
+    font-size: 30px;
+  }
+  .footer_text{
+    margin: 0;
+  }
+   .footer{
+    height: 120px;
+   }
+   .contact{
+    flex-direction: column;
+   }
+   
 }
