Background Image Link Updated

--- a/static/style.css
+++ b/static/style.css
@@ -4,7 +4,7 @@
     outline: none;
   }
   body{
-    background:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.1)), url("bg.jpg");
+    background:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.1)), url("https://images.unsplash.com/photo-1505751172876-fa1923c5c528?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8bWVkaWNpbmV8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60");
     background-repeat: no-repeat;
     background-size: cover;
   }
