Input Type Rules Improved

--- a/templates/result.html
+++ b/templates/result.html
@@ -28,7 +28,7 @@
 			{% endif %}
             <input class="btn btn-dark w-100 mt-4" type="submit" value="Go Back"/>
         </form>
-		<div class="footer">
+		<div class="footer" style="margin-top: 7rem;">
             <div class="contact">
               <div>
               <i class="footer_text">Get In Touch</i>
