--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
               <div>
                 <a target="_blank" href="mailto:geekforgeeks222@gmail.com"><i
                 class="fa fa-envelope fa-lg contact-icon" id="email"></i></a>
-                <a target="_blank" href="https://github.com/krupalvasani"><i
+                <a target="_blank" href="https://github.com/immutable-krupal"><i
                 class="fab fa-github fa-lg contact-icon" id="git"></i></a>
               <a target="_blank" href="https://www.linkedin.com/in/krupal-vasani/"><i
                 class="fab fa-linkedin fa-lg contact-icon" id="lkd"></i></a>
